# gossip

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: build.rs  gui.rs  main.rs
