[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# Add these lines for Windows builds
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Gossip"
identifier = "com.yourname.yourapp"
icon = ["assets/icon.png"]
version = "0.1.0"
copyright = "Copyright (c) Your Name 2024. All rights reserved."
category = "public.app-category.social-networking"
short_description = "A secure chat application"
long_description = """
A secure peer-to-peer chat application built with iroh-gossip.
"""

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.27", features = ["derive"] }
data-encoding = "2.7.0"
ed25519-dalek = "2.1.1"
futures-lite = "2.6.0"
iroh = "0.31.0"
iroh-gossip = "0.31.0"
postcard = "1.1.1"
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = "1.43.0"
tracing-subscriber = "0.3.19"

eframe = "0.22.0"
hex = "0.4.3"
futures = "0.3.31"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
strip = true        # Strip symbols from binary
